--- a/app/src/main/res/layout/activity_soeharto.xml
+++ b/app/src/main/res/layout/activity_soeharto.xml
@@ -113,7 +113,7 @@
                     android:id="@+id/textView8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Saran Menu"
+                    android:text="Presiden Indonesia"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:layout_marginStart="15dp"
